Clean up export_panel.py

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ MuSkeMo utilities/MuSkeMo_to_OpenSim.asv
 MuSkeMo utilities/CreateOpenSimModelFunc.asv
 MuSkeMo manual/MuSkeMo manual.aux
 
+list/
 MuSkeMo manual/MuSkeMo manual.bbl
 MuSkeMo manual/MuSkeMo manual.bcf
 MuSkeMo manual/MuSkeMo manual.blg
